--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ ASI_ONE_API_KEY = sk_a7ea74790f144c2da2a073aa59ef3da934d74ea1584b402b9da53eca0f7
 DEEPGRAM_API_KEY = d491f07380a249e7d8e9fc5cbe55f7944b5056d4
 ELEVENLABS_API_KEY = sk_c351a8a9c7a3bbebd97515237062572c27bd5b45dbb5965c
 
+AGENT_SEED_PHRASE="child imitation agent for friendly conversations"
